# IW-2

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
files/: words.txt
libs/recommendation/include/: recommendation.h
libs/recommendation/src/: recommendation.c
libs/recommendation_forked/include/: recommendation_forked.h
libs/recommendation_forked/src/: recommendation_forked.c
main/: main.c
tests/: stress_test.cpp  stress_test_forked.cpp  tests.cpp  tests_forked.cpp
